--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/Users/user/Documents/Web Development/HTML Personal Site/Images/322868_1100-800x825.jpeg" alt="Me"></td>
+      <td><img src="Images/322868_1100-800x825.jpeg" alt="Me"></td>
       <td>
         <h1>Curtley</h1>
         <p><em>The New <strong>Employee</strong> at <a href="https://careers.hotjar.com/o/customer-support-specialist-emea-london">Hotjar</a></em></p>
