--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </ol>
   <hr color = "red">
   <h3>Contact Me</h3>
-  <a href="/Users/user/Documents/Web Development/HTML Personal Site/ContactMe.html">Contact Details</a>
+  <a href="HTML Personal Site/ContactMe.html">Contact Details</a>
   <br>
   <hr color = "red">
   <h3>Skills</h3>
@@ -57,7 +57,7 @@
   </table>
 <hr>
 <h3>Forms</h3>
-<a href="/Users/user/Documents/Web Development/HTML Personal Site/Inputs.html">Forms</a>
+<a href="HTML Personal Site/Inputs.html">Forms</a>
 </body>
 
 </html>
